# Moryx_engine

./: .env.cmake  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  engine_name.txt  launch.bat
lib/FastNoise2/: Makefile  cmake_install.cmake
lib/FastNoise2/src/: Makefile  cmake_install.cmake
lua-5.4.6/: CMakeLists.txt
src/App/: app_window.cpp  app_window.h  display.cpp  display.h  main.cpp
src/Engine/: window.cpp  window.h
src/Engine/entities/: component_array.h  component_manager.h  coordinator.h  entity.h  entity_manager.h  entity_system.h  entity_system_manager.h  voxel_components.cpp  voxel_components.h
src/Engine/graphics_engine/: graphics_engine.cpp  graphics_engine.h  graphics_headers.h  prerequisites.h
src/Engine/input_system/: input_listener.h  input_system.cpp  input_system.h
src/Engine/math/: matrix4x4.h  vector2D.h  vector3D.h  vector4D.h  vertex_mesh.h
src/Engine/physics/: physics.cpp  physics.h
src/Engine/windowing/: window.cpp  window.h
src/Game/: components.h  display.cpp  display.h  entity_handler.cpp  entity_handler.h  game.cpp  game.h  game_engine.h  i_game_project_manager.cpp  i_game_project_manager.h  main.cpp  varnt.cpp  varnt.h
src/Game_Directories/Kore/: Kore.cpp  Kore.h  chunk.h  chunk_generator.cpp  chunk_generator.h  voxel_data.h
src/Game_Directories/The Queen Must Grow/: The_Queen_Must_Grow.cpp  The_Queen_Must_Grow.h
src/Game_Directories/VET/: VET.cpp  VET.h
src/Graphics_System/: prerequisites.h
src/Graphics_System/Graphics/: graphics_engine.cpp  graphics_engine.h
src/Graphics_System/Math/: instance_data.h  matrix4x4.h  point.h  rect.h  vector2D.h  vector3D.h
src/Graphics_System/Resource/: font.cpp  font.h  material.cpp  material.h  mesh.cpp  mesh.h  resource.cpp  resource.h  resource_manager.cpp  resource_manager.h  texture.cpp  texture.h
src/Graphics_System/Windowing/: window.cpp  (+1 more)
src/Input_System/: input_listener.h  input_system.cpp  input_system.h
src/Physics_System/: AABB.h  physics.cpp  physics.h
src/W32_Game/: w32_game.cpp
src/shaders/: comb_layout.hlsl  fragment.hlsl  inst_mesh_layout.hlsl  mono_shader.hlsl  shader.fx  skybox_frag.hlsl  skybox_vert.hlsl  test_frag.hlsl  test_vert.hlsl  tilemap.hlsl  vert_mesh_layout.hlsl  vertex.hlsl
(+90 files in other folders)
